# dota2_assistant

./: CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: gsi_connector.md
scripts/: clean_build.bat  generate_vs_solution.bat  setup_dependencies.bat
src/: CMakeLists.txt  main.cpp
src/analysis/: CMakeLists.txt  placeholder.cpp
src/core/: CMakeLists.txt  game_state.cpp  game_state.h
src/services/: CMakeLists.txt  dummy.cpp  gsi_connector.cpp  gsi_connector.h
src/services/gsi/: gsi_connector.cpp  gsi_connector.h
src/ui/: CMakeLists.txt  placeholder.cpp
src/utils/: CMakeLists.txt  httplib.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  placeholder.cpp
tests/performance/: CMakeLists.txt  placeholder.cpp
tests/unit/: CMakeLists.txt  test_game_state.cpp  test_gsi_connector.cpp
tests/unit/services/gsi/: gsi_connector_test.cpp
